--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "odin-book",
+  "engines": {
+    "node": "16.13.1"
+  },
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www",
+    "devstart": "DEBUG=odin-book:* npm start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
