--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "private": true,
+  "proxy": "http://localhost:3001/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
