--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "devstart": "DEBUG=odin-book:* npm start"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.0.0",
