--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@mui/styled-engine-sc": "^5.1.0",
+    "date-fns": "^2.28.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
