--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
     "@mui/styled-engine-sc": "^5.1.0",
+    "cloudinary": "^1.29.1",
+    "cloudinary-react": "^1.7.2",
     "date-fns": "^2.28.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^12.1.0",
     "react-hook-form": "^7.27.1",
     "react-toastify": "^8.2.0",
     "styled-components": "^5.3.3",
