--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dropzone": "^12.1.0",
     "react-hook-form": "^7.27.1",
     "react-toastify": "^8.2.0",
+    "react-youtube": "^9.0.1",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
