--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@giphy/js-fetch-api": "^4.1.2",
+    "@giphy/react-components": "^5.7.0",
     "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.7",
@@ -20,6 +22,7 @@
     "date-fns": "^2.28.0",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-async-hook": "^4.0.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^12.1.0",
     "react-hook-form": "^7.27.1",
