--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "devstart": "DEBUG=odin-book:* npm start"
+    "devstart": "DEBUG=odin-book:* npm start",
+    "client": "npm start --prefix client",
+    "production": "concurrently \"npm run start\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
+    "concurrently": "^7.2.1",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
