--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "concurrently \"npm run prod\" \"npm run client\"",
+    "prod": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "devstart": "DEBUG=odin-book:* npm start",
     "client": "npm start --prefix client",
-    "production": "concurrently \"npm run start\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "dependencies": {
